--- a/homeWork1/package.json
+++ b/homeWork1/package.json
@@ -23,14 +23,13 @@
     "react-dom": "^16.4.2",
     "style-loader": "^0.23.0",
     "webpack": "^4.17.1",
-    "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.6"
+    "webpack-cli": "^3.1.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
     "webpack": "^4.17.1",
     "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.7"
+    "webpack-dev-server": "^3.1.9"
   },
   "description": ""
 }
