--- a/homeWork2/youtube-app/package.json
+++ b/homeWork2/youtube-app/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "bootstrap": "^4.1.3",
     "react": "^16.5.2",
+    "react-debounce-input": "^3.2.0",
     "react-dom": "^16.5.2",
     "react-scripts": "2.0.4",
     "youtube-api-search": "0.0.5"
